Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56452

Some compose key sequences do not work with the "compose" input method plugin

XMLWordPrintable

      Originated from https://bugreports.qt.io/browse/QTBUG-49438

      > On my system (BÉPO layout, Arch Linux with QT 5.5.1), all dead keys works in GTK3 and QT4 apps. However, some don’t in QT5 ones.
      > For instance, AltGr+i is for diaeresis (e.g. followed by e, it gives ë) and does work in QT5 apps.
      > However, AltGr+Shift+e which is for currency (e.g. followed by l, it gives £), is not working. Nor does AltGr+g, which stand for greeks (followed by m, it gives μ).

      Bruno Pagani I can reproduce the not working compose key sequences with the "compose" input method plugin. The same sequences work as expected with the "ibus" input method plugin. The quick solution for you is to switch to using "ibus" instead of "compose".

        For Gerrit Dashboard: QTBUG-56452
        # Subject Branch Project Status CR V

            Unassigned Unassigned
            paeglis Gatis Paeglis
            Votes:
            6 Vote for this issue
            Watchers:
            15 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes